<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>olav_control</name>
  <version>1.0.0</version>
  <description>OLAV vehicle control subsystems</description>
  <maintainer email="dsi@aarhusrobotics.com">Dario Sirangelo</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ackermann_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>Eigen3</build_depend>
  <build_depend>olav_interfaces</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_action</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>