<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>olav_launch</name>
  <version>1.0.0</version>
  <description>Launch configuration files for OLAV, the off-road light autonomous vehicle.</description>
  <maintainer email="dsi@aarhusrobotics.com">Dario Sirangelo</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>depthai-descriptions</exec_depend>
  <exec_depend>olav_control</exec_depend>
  <exec_depend>olav_sensors</exec_depend>
  <exec_depend>ouster_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>