<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>olav_sensors</name>
  <version>1.0.0</version>
  <description>OLAV sensor configuration and launch files</description>
  <maintainer email="dsi@aarhusrobotics.com">Dario Sirangelo</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>olav_core</depend>
  <depend>olav_interfaces</depend>
  <depend>nav_msgs</depend>
  <depend>nlohmann-json-dev</depend>
  <depend>serial</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>