<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>olav_utilities</name>
  <version>1.0.0</version>
  <description>Utilities for OLAV, the off-road light autonomous vehicle.</description>
  <maintainer email="dsi@aarhusrobotics.com">Dario Sirangelo</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <depend>rclpy</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>